--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
   z-index: 10;
   right: auto;
   text-align: left;
-  max-width: 400px;
+  max-width: 25%;
   background-color: rgba(128, 128, 128, 0.5);
   left: 10%;
   padding: 15px; }
