--- a/css/styles.css
+++ b/css/styles.css
@@ -35,15 +35,15 @@ body {
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
+/* Center align the text within the four columns below the carousel */
+.marketing .col-lg-3 {
   margin-bottom: 1.5rem;
   text-align: center; }
 
 .marketing h2 {
   font-weight: 400; }
 
-.marketing .col-lg-4 p {
+.marketing .col-lg-3 p {
   margin-right: .75rem;
   margin-left: .75rem; }
 
