--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,6 +6,7 @@ body {
   padding-top: 3rem;
   padding-bottom: 3rem;
   color: #5a5a5a;
+  
 }
 
 
@@ -43,15 +44,15 @@ body {
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
+/* Center align the text within the four columns below the carousel */
+.marketing .col-lg-3 {
   margin-bottom: 1.5rem;
   text-align: center;
 }
 .marketing h2 {
   font-weight: 400;
 }
-.marketing .col-lg-4 p {
+.marketing .col-lg-3 p {
   margin-right: .75rem;
   margin-left: .75rem;
 }
