--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,7 +6,7 @@ body {
   padding-top: 3rem;
   padding-bottom: 3rem;
   color: #5a5a5a;
-  
+
 }
 
 
@@ -93,4 +93,11 @@ body {
   .featurette-heading {
     margin-top: 7rem;
   }
+}
+
+.alert-custom {
+  background-color: #FFC200;
+  color:#202529;
+  margin-bottom: 0;
+  padding-top: 20px;
 }
