--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  color: #5a5a5a; }
+  color: #5a5a5a;
+  background-color: #FDF3DD; }
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
