--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,17 @@ body {
   min-width: 100%;
   height: 32rem; }
 
+.carousel-item img {
+  display: block;
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover; }
+
 /* MARKETING CONTENT
 -------------------------------------------------- */
 /* Center align the text within the four columns below the carousel */
