--- a/css/styles.scss
+++ b/css/styles.scss
@@ -42,6 +42,18 @@ body {
   height: 32rem;
 }
 
+.carousel-item img {
+  display: block;
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+}
+
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
